Fix T102612: Line art crash on loading due to references to other scenes.